--- a/src/NETMVCBlot/packages.config
+++ b/src/NETMVCBlot/packages.config
@@ -26,6 +26,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.SharePoint.Client" version="14.0.4762.1000" targetFramework="net472" />
+  <package id="Microsoft.SharePoint.dll" version="15.0.4867.1000" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.WebSockets" version="0.2.3.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
@@ -34,6 +35,7 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="SharePoint" version="15.0.0" targetFramework="net472" />
   <package id="SharePoint.Client.Search" version="15.0.0" targetFramework="net472" />
+  <package id="SharePoint.Client.ServerRuntime" version="15.0.0" targetFramework="net472" />
   <package id="SharePoint.Search" version="15.0.0" targetFramework="net472" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
