--- a/src/NETWebFormsBlot/Web.config
+++ b/src/NETWebFormsBlot/Web.config
@@ -12,7 +12,6 @@
     <!-- CTSECISSUE: HardcodedPasswordInConfiguration -->
     <add name="myConnectionString" connectionString="Driver={PostgreSQL ANSI};Server=IP address;Port=5432;Database=myDataBase;Uid=myUsername;Pwd=myPassword;sslmode=disable;" />
   </connectionStrings>
-
   <applicationSettings>
     <WindowsApplication1.Properties.Settings>
       <!-- CTSECISSUE:HardcodedPasswordInConfiguration -->
@@ -24,7 +23,6 @@
       </setting>
     </WindowsApplication1.Properties.Settings>
   </applicationSettings>
-
   <appSettings>
     <!-- CTSECISSUE:InsecureSignatureValidationDirective -->
     <add key="aspnet:UseLegacyEncryption" value="true" />
@@ -52,42 +50,28 @@
     <add key="aspnet:AllowRelaxedUnicodeDecoding" value="true" />
     <!-- CTSECISSUE:InsecureAllowUtf7RequestContentEncodingDirective  -->
     <add key="aspnet:AllowUtf7RequestContentEncoding" value="true" />
-
     <!-- CTSECISSUE:EmptyPasswordInConfiguration -->
     <add key="password" value="" />
     <a>asd</a>
     <!-- CTSECISSUE:EmptyPasswordInConfiguration -->
     <add key="secret" value="" />
   </appSettings>
-
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network">
         <!-- CTSECISSUE:HardcodedPasswordInConfiguration -->
         <!-- CTSECISSUE: -->
-        <network
-          clientDomain="www.contoso.com"
-          defaultCredentials="false"
-          password="ansdh2"
-          enableSsl="false"
-          host="mail.contoso.com"
-          port="25"
-            />
+        <network clientDomain="www.contoso.com" defaultCredentials="false" password="ansdh2" enableSsl="false" host="mail.contoso.com" port="25" />
       </smtp>
     </mailSettings>
   </system.net>
-
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!-- CTSECISSUE:InsecureDirectoryBrowseDirective -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
-
   <!-- CTSECISSUE:InsecureCertificateValidationMode -->
-  <certificateValidation certificateValidationMode="PeerOrChainTrust"
-                         revocationMode="Online"
-                         trustedStoreLocation="LocalMachine" />
-
+  <certificateValidation certificateValidationMode="PeerOrChainTrust" revocationMode="Online" trustedStoreLocation="LocalMachine" />
   <bindings>
     <netMsmqBinding>
       <binding>
@@ -98,78 +82,72 @@
       </binding>
     </netMsmqBinding>
   </bindings>
-
   <behaviors>
     <serviceBehaviors>
       <behavior name="NewBehavior">
         <!-- CTSECISSUE:InsecureIncludeExceptionDetailInFaultsDirective -->
-        <serviceDebug includeExceptionDetailInFaults="true"/>
+        <serviceDebug includeExceptionDetailInFaults="true" />
         <!-- CTSECISSUE:InsecureServiceMetadataDirective -->
-        <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+        <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
         <!-- CTSECISSUE:InsecurePrincipalPermissionMode -->
         <serviceAuthorization principalPermissionMode="None" />
         <!-- CTSECISSUE:InsecureSuppressAuditFailureDirective -->
-        <serviceSecurityAudit auditLogLocation="Application"
-            suppressAuditFailure="true"
-            serviceAuthorizationAuditLevel="Success"
-            messageAuthenticationAuditLevel="Success" />
+        <serviceSecurityAudit auditLogLocation="Application" suppressAuditFailure="true" serviceAuthorizationAuditLevel="Success" messageAuthenticationAuditLevel="Success" />
       </behavior>
     </serviceBehaviors>
   </behaviors>
-
   <wsHttpBinding>
     <binding name="myBinding">
       <!-- CTSECISSUE:InsecureWSHTTPBindingSecurityMode -->
       <!-- CTSECISSUE:InsecureWSHTTPBindingClientCredentialType -->
-      <security mode="None" >
+      <security mode="None">
         <message clientCredentialType="None" />
       </security>
     </binding>
   </wsHttpBinding>
-
   <system.web>
-
     <!-- CTSECISSUE:InsecureCertificateValidationMode -->
     <!-- CTSECISSUE:InsecureCertificateRevocationMode -->
-    <authentication customCertificateValidatorType="String"
-              certificateValidationMode="None"
-              revocationMode="NoCheck"
-              trustedStoreLocation="LocalMachine" />
-
+    <authentication customCertificateValidatorType="String" certificateValidationMode="None" revocationMode="NoCheck" trustedStoreLocation="LocalMachine" />
     <!-- CTSECISSUE:InsecureRoleManager-->
-    <roleManager defaultProvider="SqlProvider"
-        enabled="true"
-        cacheRolesInCookie="true"
-        cookieName=".ASPROLES"
-        cookieTimeout="30"
-        cookiePath="/"
-        cookieRequireSSL="false"
-        cookieSlidingExpiration="true"
-        cookieProtection="None">
-
+    <roleManager defaultProvider="SqlProvider" enabled="true" cacheRolesInCookie="true" cookieName=".ASPROLES" cookieTimeout="30" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="None">
       <providers>
-        <clear/>
-        <add
-          name="SqlProvider"
-          type="System.Web.Security.SqlRoleProvider"
-          connectionStringName="SqlServices"
-          applicationName="MyApplication" />
+        <clear />
+        <add name="SqlProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="SqlServices" applicationName="MyApplication" />
       </providers>
-
     </roleManager>
-
     <!-- CTSECISSUE:InsecureTraceDirective-->
-    <trace enabled="true" pageOutput="true" requestLimit="40" localOnly="false"/>
-    <authentication mode="Windows"/>
+    <trace enabled="true" pageOutput="true" requestLimit="40" localOnly="false" />
+    <authentication mode="Windows" />
     <!-- CTSECISSUE:UnsafeImpersonation -->
     <!-- CTSECISSUE:EmptyPasswordInConfiguration -->
-    <identity impersonate="true" userName="foo" password="  "/>
+    <identity impersonate="true" userName="foo" password="  " />
     <!-- CTSECISSUE:UnsafeDebugDirective-->
-    <compilation debug="true" targetFramework="4.7.2"/>
+    <compilation debug="true" targetFramework="4.7.2">
+      <assemblies>
+        <add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.ComponentModel.DataAnnotations, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add assembly="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Data.DataSetExtensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Xml, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Web.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.EnterpriseServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Web.DynamicData, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add assembly="System.Web.Entity" />
+        <add assembly="System.Web.ApplicationServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      </assemblies>
+    </compilation>
     <!-- CTSECISSUE:InsecureRequestValidationMode -->
     <!-- CTSECISSUE:UnsafeVersionLeakageDirective (enableVersionHeader default value is true)-->
     <!-- CTSECISSUE:InsecureEnableHeaderChecking -->
-    <httpRuntime requestValidationMode="2.0" targetFramework="4.7.2" enableHeaderChecking="false"/>
+    <httpRuntime requestValidationMode="2.0" targetFramework="4.7.2" enableHeaderChecking="false" />
     <!-- CTSECISSUE:UnsafeTraceDirective -->
     <trace enabled="true" requestLimit="40" localOnly="false" />
     <!-- CTSECISSUE:DisabledRequestValidation -->
@@ -177,40 +155,24 @@
     <!-- CTSECISSUE:DisabledViewStateMac -->
     <pages validateRequest="false" viewStateEncryptionMode="Never" enableViewStateMac="False">
       <namespaces>
-        <add namespace="System.Web.Optimization"/>
+        <add namespace="System.Web.Optimization" />
       </namespaces>
       <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-
     <!-- CTSECISSUE:MissingFail-SafeErrorHandling -->
     <customErrors mode="Off">
     </customErrors>
-
     <!-- CTSECISSUE: DisabledSessionCookies -->
     <!-- CTSECISSUE: InsecureSessionTimeout -->
     <!-- CTSECISSUE: InsecureNetworkTimeout -->
     <!-- CTSECISSUE: HardcodedPasswordInConfiguration -->
-    <sessionState mode="InProc"
-      stateConnectionString="tcpip=127.0.0.1:42424"
-      stateNetworkTimeout=" 11 "
-      sqlConnectionString="data source=127.0.0.1;
-            Initial Catalog=myDataBase;User ID=myUsername;Password=myPassword;"
-      sqlCommandTimeout="30"
-      customProvider=""
-      cookieless="true"
-      cookieName="ASP.NET_SessionId"
-      timeout="20"
-      allowCustomSqlDatabase="False"
-      regenerateExpiredSessionId="False"
-      partitionResolverType=""
-      useHostingIdentity="True">
+    <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout=" 11 " sqlConnectionString="data source=127.0.0.1;&#xA;            Initial Catalog=myDataBase;User ID=myUsername;Password=myPassword;" sqlCommandTimeout="30" customProvider="" cookieless="true" cookieName="ASP.NET_SessionId" timeout="20" allowCustomSqlDatabase="False" regenerateExpiredSessionId="False" partitionResolverType="" useHostingIdentity="True">
       <providers>
         <clear />
       </providers>
     </sessionState>
-
     <authentication mode="Forms">
       <!-- CTSECISSUE:InsecureSessionTimeout -->
       <!-- CTSECISSUE:MissingCookieProtection -->
@@ -239,58 +201,47 @@
     <!-- CTSECISSUE:MissingSecureCookieAttribute -->
     <!-- CTSECISSUE:MissingHttpOnlyCookieAttribute -->
     <httpCookies requireSSL="false" />
-
     <!-- CTSECISSUE:InsecureDocumentationProtocolDirective -->
     <webServices>
       <protocols>
-        <clear/>
-        <add name="AnyHttpSoap"/>
-        <add name="Documentation"/>
-        <add name="HttpPostLocalhost"/>
-        <remove name="HttpGet"/>
-        <remove name="HttpPost"/>
-        <remove name="Unknown"/>
+        <clear />
+        <add name="AnyHttpSoap" />
+        <add name="Documentation" />
+        <add name="HttpPostLocalhost" />
+        <remove name="HttpGet" />
+        <remove name="HttpPost" />
+        <remove name="Unknown" />
       </protocols>
     </webServices>
-
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2"/>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed"/>
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930"/>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-
   <system.diagnostics>
     <sources>
       <!-- CTSECISSUE: WCFPossibleUnsafeDiagnostics -->
-      <source name="System.ServiceModel"
-                 switchValue="Information, ActivityTracing"
-                 propagateActivity="true">
+      <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
         <listeners>
-          <add name="traceListener"
-              type="System.Diagnostics.XmlWriterTraceListener"
-              initializeData= "c:\log\Traces.svclog" />
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\log\Traces.svclog" />
         </listeners>
       </source>
     </sources>
