--- a/src/CoreStandaloneBlot/CoreStandaloneBlot.csproj
+++ b/src/CoreStandaloneBlot/CoreStandaloneBlot.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="System.IO.Pipes" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
